支持范型入参